--- a/.github/workflows/deploy_oas.yaml
+++ b/.github/workflows/deploy_oas.yaml
@@ -87,6 +87,10 @@ jobs:
       - name: Checkout
         uses: actions/checkout@v4
 
-      - name: Confirmation
+      - name: kengen
         run: |
           chmod +x ./tests/e2e.sh nothing
+
+      - name: Confirmation
+        run: |
+          ./tests/e2e.sh nothing
