--- a/.github/workflows/deploy_oas.yaml
+++ b/.github/workflows/deploy_oas.yaml
@@ -18,8 +18,21 @@ jobs:
     env:
       SPECFILE: "openapi.yaml"
     steps:
-      - name: Checkout
-        uses: actions/checkout@v4
+      - name: Checkout with retry
+        run: |
+          for i in {1..5}; do
+            echo "Attempt $i: Downloading repository tarball"
+            if curl --retry 5 --retry-delay 10 -L \
+              -H "Authorization: token ${{ secrets.GITHUB_TOKEN }}" \
+              https://api.github.com/repos/${{ github.repository }}/tarball/${{ github.sha }} \
+              -o repo.tar.gz; then
+              tar -xzf repo.tar.gz --strip-components=1
+              echo "Checkout succeeded"
+              break
+            fi
+            echo "Retrying in 10 seconds..."
+            sleep 10
+          done
 
       - name: Run inso lint
         run: inso lint spec $SPECFILE --verbose
@@ -33,8 +46,21 @@ jobs:
     env:
       SPECFILE: "openapi.yaml"
     steps:
-      - name: Checkout
-        uses: actions/checkout@v4
+      - name: Checkout with retry
+        run: |
+          for i in {1..5}; do
+            echo "Attempt $i: Downloading repository tarball"
+            if curl --retry 5 --retry-delay 10 -L \
+              -H "Authorization: token ${{ secrets.GITHUB_TOKEN }}" \
+              https://api.github.com/repos/${{ github.repository }}/tarball/${{ github.sha }} \
+              -o repo.tar.gz; then
+              tar -xzf repo.tar.gz --strip-components=1
+              echo "Checkout succeeded"
+              break
+            fi
+            echo "Retrying in 10 seconds..."
+            sleep 10
+          done
 
       - name: Convert from OpenAPI Spec to Kong Config
         run: |
@@ -84,8 +110,21 @@ jobs:
     container:
       image: ubuntu
     steps:
-      - name: Checkout
-        uses: actions/checkout@v4
+      - name: Checkout with retry
+        run: |
+          for i in {1..5}; do
+            echo "Attempt $i: Downloading repository tarball"
+            if curl --retry 5 --retry-delay 10 -L \
+              -H "Authorization: token ${{ secrets.GITHUB_TOKEN }}" \
+              https://api.github.com/repos/${{ github.repository }}/tarball/${{ github.sha }} \
+              -o repo.tar.gz; then
+              tar -xzf repo.tar.gz --strip-components=1
+              echo "Checkout succeeded"
+              break
+            fi
+            echo "Retrying in 10 seconds..."
+            sleep 10
+          done
 
       - name: Authe2e
         run: |
