--- a/.github/workflows/deploy_oas.yaml
+++ b/.github/workflows/deploy_oas.yaml
@@ -20,7 +20,7 @@ jobs:
     steps:
       - name: Checkout with retry
         run: |
-          set -e
+          set -x
           for i in {1..5}; do
             echo "Attempt $i: actions/checkout"
             if gh workflow run; then
@@ -30,8 +30,11 @@ jobs:
             sleep 15
           done
 
-      - name: Run inso lint
-        run: inso lint spec $SPECFILE --verbose
+      - name: Install OpenAPI CLI
+        run: npm install -g @redocly/openapi-cli
+
+      - name: Lint OpenAPI Spec
+        run: openapi lint openapi.yaml
 
   deploy-oas:
     runs-on: self-hosted
@@ -104,7 +107,7 @@ jobs:
     steps:
       - name: Checkout with retry
         run: |
-          set -e
+          set -x
           for i in {1..5}; do
             echo "Attempt $i: actions/checkout"
             if gh workflow run; then
@@ -114,8 +117,11 @@ jobs:
             sleep 15
           done
 
-      - name: Run inso lint
-        run: inso lint spec $SPECFILE --verbose
+      - name: Install OpenAPI CLI
+        run: npm install -g @redocly/openapi-cli
+
+      - name: Lint OpenAPI Spec
+        run: openapi lint openapi.yaml
 
       - name: Authe2e
         run: |
