--- a/.github/workflows/deploy_oas.yaml
+++ b/.github/workflows/deploy_oas.yaml
@@ -13,24 +13,16 @@ env:
 jobs:
   lint-spec:
     runs-on: ubuntu-latest
+    container:
+      image: kong/inso
+    env:
+      SPECFILE: "openapi.yaml"
     steps:
-      - name: Checkout with retry
-        run: |
-          set -x
-          for i in {1..5}; do
-            echo "Attempt $i: actions/checkout"
-            if gh workflow run; then
-              break
-            fi
-            echo "Retrying in 15 seconds..."
-            sleep 15
-          done
+      - name: Checkout
+        uses: actions/checkout@v4
 
-      - name: Install OpenAPI CLI
-        run: npm install -g @redocly/openapi-cli
-
-      - name: Lint OpenAPI Spec
-        run: openapi lint openapi.yaml
+      - name: Run inso lint
+        run: inso lint spec $SPECFILE --verbose
 
   deploy-oas:
     runs-on: self-hosted
@@ -41,17 +33,8 @@ jobs:
     env:
       SPECFILE: "openapi.yaml"
     steps:
-      - name: Checkout with retry
-        run: |
-          set -e
-          for i in {1..5}; do
-            echo "Attempt $i: actions/checkout"
-            if gh workflow run; then
-              break
-            fi
-            echo "Retrying in 15 seconds..."
-            sleep 15
-          done
+      - name: Checkout
+        uses: actions/checkout@v4
 
       - name: Convert from OpenAPI Spec to Kong Config
         run: |
@@ -101,23 +84,8 @@ jobs:
     container:
       image: ubuntu
     steps:
-      - name: Checkout with retry
-        run: |
-          set -x
-          for i in {1..5}; do
-            echo "Attempt $i: actions/checkout"
-            if gh workflow run; then
-              break
-            fi
-            echo "Retrying in 15 seconds..."
-            sleep 15
-          done
-
-      - name: Install OpenAPI CLI
-        run: npm install -g @redocly/openapi-cli
-
-      - name: Lint OpenAPI Spec
-        run: openapi lint openapi.yaml
+      - name: Checkout
+        uses: actions/checkout@v4
 
       - name: Authe2e
         run: |
