--- a/.github/workflows/deploy_oas.yaml
+++ b/.github/workflows/deploy_oas.yaml
@@ -29,7 +29,7 @@ jobs:
     needs: lint-spec
     container:
       image: kong/deck
-      options: --user root
+      options: --user root --dns 8.8.8.8
     env:
       SPECFILE: "openapi.yaml"
     steps:
