--- a/.github/workflows/deploy_oas.yaml
+++ b/.github/workflows/deploy_oas.yaml
@@ -12,7 +12,7 @@ env:
 
 jobs:
   lint-spec:
-    runs-on: ubuntu-latest
+    runs-on: self-hosted
     container:
       image: kong/inso
     env:
